# zero2prod

./: Cargo.toml  Dockerfile  recipe.json  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: init_db.sh  test_subscribe.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: greet.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
