[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Eric Sibley <ericnsibley@gmail.com>", "Luca Palmieri <contact@lpalmieri.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.153", features = ["derive"]}
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}
config = "0.13"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
